# python-project-83

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
page_analyzer/: app.py  database.py  database.sql  parser.py  requests.py  urls.py
page_analyzer/templates/: basic.html  database.py  index.html  show.html  url_details.html  url_list.html  urls.html
